--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
 
 <body id="center">
     <div>  
-        <img src="https://github.com/gk9527/gk9527.github.io/blob/main/33.jpg" width="70px"> <a href="https://space.bilibili.com/37974444/?spm_id_from=333.999.0.0" target="_self">新闻</a>  > 正文
+        <img src="33.jpg" width="70px"> <a href="https://space.bilibili.com/37974444/?spm_id_from=333.999.0.0" target="_self">新闻</a>  > 正文
         <h1>焦点访谈:中国底气!</h1>
         <hr>
         <span id="time">2023 3 25 15:42 </span> <span > <a href="https://www.cctv.com/" target="_blank">央视网</a> </span>
         <hr>
         <p><b>根本不用20秒</b>,开局即夺走你的卧槽</p>
-        <video src="1/1.mp4" controls width="800px"></video>
+        <video src="1.mp4" controls width="800px"></video>
         <p><strong>美妙</strong>的音频</p>
         <br>
         <p>1.</p>
-        <audio src="1/2.mp3" controls></audio>
+        <audio src="2.mp3" controls></audio>
         <p>2 &nbsp;.</p>
-        <audio src="1/3.mp3" controls></audio>
+        <audio src="3.mp3" controls></audio>
         <p>3.</p>
-        <audio src="1/4.mp3" controls></audio>
+        <audio src="4.mp3" controls></audio>
         <br>
         <br>
         表格:
@@ -66,13 +66,13 @@
             </tr>
             <tr>
                 <td>1</td>
-                <td><img src="https://github.com/gk9527/gk9527.github.io/blob/main/11.jpg" width="100px"></td>
+                <td><img src="11.jpg" width="100px"></td>
                 <td>华为</td>
                 <td>华为技术有限公司</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td><img src="https://github.com/gk9527/gk9527.github.io/blob/main/22.png" width="100px"></td>
+                <td><img src="22.png" width="100px"></td>
                 <td>阿里</td>
                 <td>阿里巴巴集团控股有限公司</td>
             </tr>         
