--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <span id="time">2023 3 25 15:42 </span> <span > <a href="https://www.cctv.com/" target="_blank">央视网</a> </span>
         <hr>
         <p><b>根本不用20秒</b>,开局即夺走你的卧槽</p>
-        <video src="https://github.com/gk9527/gk9527.github.io/releases/tag/test" controls width="800px"></video>
+        <video src="https://github.com/gk9527/gk9527.github.io/releases/tag/test/1.mp4" controls width="800px"></video>
         <p><strong>美妙</strong>的音频</p>
         <br>
         <p>1.</p>
