--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body id="center">
     <div>  
         <img src="33.jpg" width="70px"> <a href="https://space.bilibili.com/37974444/?spm_id_from=333.999.0.0" target="_self">新闻</a>  > 正文
-        <h1>焦点访谈:中国底气!</h1>
+        <h1>焦点访谈:树枝666!</h1>
         <hr>
         <span id="time">2023 3 25 15:42 </span> <span > <a href="https://www.cctv.com/" target="_blank">央视网</a> </span>
         <hr>
