--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>焦点访谈:中国底气!</title>
+    <title>焦点访谈:树枝666!</title>
     <style>
         h1{
             /*color: rgb(0, 255,0);*/
